# spsc-ring-buffer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
apps/CmeDecoder/: CMakeLists.txt  main.cpp
apps/CmeExample/: CMakeLists.txt  main.cpp
apps/DropCopyLogger/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/protocols/: CMakeLists.txt
libs/protocols/include/cme/: CmeBinaryDecoder.h
libs/spsc_ring_buffer/: CMakeLists.txt
libs/spsc_ring_buffer/include/spsc_ring_buffer/: Platform.h  SpScRingBuffer.h  SpScRingBufferConsumer.h
tests/: CMakeLists.txt  test_ring_buffer.cpp
